# todo_cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  setup_mock_todos.sh
.github/workflows/: rust-ci.yml
cli/: commands.rs  handlers.rs  mod.rs
coverage/: tarpaulin-report.html
display/: formatter.rs  table.rs
docs/: ARCHITECTURE.md  DATE_FORMATS.md  DEVELOPMENT.md  FILTERING.md  INSTALLATION.md  USAGE.md
src/: lib.rs  main.rs
src/cli/: commands.rs  handlers.rs  mod.rs
src/display/: formatter.rs  mod.rs  table.rs
src/todo/: error.rs  filters.rs  item.rs  manager.rs  mod.rs
src/utils/: date.rs  mod.rs  validation.rs
todo/: config.rs  error.rs  item.rs  manager.rs  mod.rs
utils/: date.rs  validation.rs
