[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"
authors = ["Shashank Sangule <your.sanguleshashank@gmail.com>"]
description = "A command-line todo application built with Rust"
readme = "README.md"
homepage = "https://github.com/shashank-sangule/todo_cli"
repository = "https://github.com/shashank-sangule/todo_cli"
license = "MIT"
keywords = ["cli", "todo", "productivity", "task-management"]
categories = ["command-line-utilities"]

[dependencies]
assert_cmd = "2.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
clap = { version = "4.5", features = ["derive"] }
predicates = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.7"


[[bin]]
name = "todo"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

